fix: address AI scene analysis review findings